--- a/assignment1.html
+++ b/assignment1.html
@@ -24,5 +24,19 @@
       If you don't know how to make the above mentioned tags, either take a look around on
       the internet, or don't hesitate to ask me!
     -->
+    <main>
+      <h1 class="author">Xinyue Guo</h1>
+      <ul>
+          <li>
+            <p>new</p>
+          </li>
+          <li>
+            <p>new</p>
+          </li>
+          <li>
+            <p>new</p>
+          </li>
+      </ul>
+    </main>
   </body>
 </html>
